# render-api

./: .gitignore  CMakeLists.txt  compile_commands.json
example/: gpu_task_example.cpp  main.cpp  raytracing_example.cpp
examples/: Makefile  imageLoader.hpp  main.cpp  main.cpp.back  main.cpp.bak2  objLoader.hpp
include/: renderApi.hpp
shaders/: compute.slang  compute.spv  cube.vert  cube.vert.spv  example.comp  example.comp.spv  gradient.frag.spv  gradient.vert.spv  simple.comp.spv  simple.slang  textured.frag  textured.frag.spv  textured.mesh  textured.mesh.spv  textured.vert  textured.vert.spv
src/: renderApi.cpp
src/buffer/: buffer.cpp  buffer.hpp
src/compute/: compute.cpp  compute.hpp  computeManager.cpp  computeManager.hpp  computeTask.cpp  computeTask.hpp
src/context/: gpuContext.cpp  gpuContext.hpp
src/descriptor/: createDescriptorSetLayout.cpp  createDescriptorSetLayout.hpp  descriptorSetManager.cpp  descriptorSetManager.hpp
src/descriptors/: descriptors.cpp  descriptors.hpp
src/device/: renderDevice.cpp  renderDevice.hpp
src/device/thread/: gpuThread.cpp
src/gpuTask/: build.cpp  execute.cpp  gpuTask.cpp  gpuTask.hpp  secondaryCommandBuffer.cpp
src/graphics/: graphicsManager.cpp  graphicsManager.hpp  graphicsTask.cpp  graphicsTask.hpp
src/image/: image.cpp  image.hpp
src/instance/: checkExtention.cpp  renderInstance.cpp  renderInstance.hpp
src/memory/: memoryAllocator.cpp  memoryAllocator.hpp
src/pipeline/: computePipeline.cpp  computePipeline.hpp  graphicsPipeline.cpp  graphicsPipeline.hpp  pipeline.hpp  pipelineBuild.cpp  swapchain.cpp
src/query/: queryPool.cpp  queryPool.hpp
src/swapchain/: swapchain.cpp  swapchain.hpp
src/utils/: createShaderModule.cpp  imageUtils.cpp  random.cpp  utils.hpp
src/window/: renderWindow.cpp  renderWindow.hpp
